ver 3.1 update security

--- a/src/main/resources/templates/createAccount.html
+++ b/src/main/resources/templates/createAccount.html
@@ -86,7 +86,7 @@
             <div class="row">
                 <div class="col d-flex justify-content-end">
                     <button class="btn btn-primary" type="submit">Save Changes</button>
-                    <button><a href="/">Back to list</a></button>
+                    <button><a href="/admin">Back to list</a></button>
                 </div>
             </div>
         </form>
