--- a/src/main/resources/templates/viewAdmin.html
+++ b/src/main/resources/templates/viewAdmin.html
@@ -22,7 +22,7 @@
     <div class="col">
       <div class="e-tabs mb-3 px-3">
         <ul class="nav nav-tabs">
-          <li class="nav-item"><a class="nav-link active" href="/">Account</a></li>
+          <li class="nav-item"><a class="nav-link active" href="/admin">Account</a></li>
         </ul>
       </div>
 
@@ -67,11 +67,11 @@
                         <div class="btn-group align-top">
                           <button class="btn btn-sm btn-outline-secondary badge"
                                   type="button">
-                            <a th:href="@{/edit(id=${u.idUser})}">Edit</a>
+                            <a th:href="@{/admin/edit(id=${u.idUser})}">Edit</a>
                           </button>
                           <button class="btn btn-sm btn-outline-secondary badge"
                                   type="button">
-                            <a th:href="@{/delete(id=${u.idUser})}"><i
+                            <a th:href="@{/admin/delete(id=${u.idUser})}"><i
                                     class="fa fa-trash"></i></a>
                           </button>
                         </div>
@@ -83,11 +83,11 @@
 
                 <div class="d-flex justify-content-center">
                   <button th:if="${accounts.hasPrevious()}">
-                    <a class="page-link" th:href="@{/(page=${accounts.number} - 1)}"><<<<<</a>
+                    <a class="page-link" th:href="@{/admin/(page=${accounts.number} - 1)}"><<<<<</a>
                   </button>
                   <b th:text="${accounts.number} + 1"></b> / <b th:text="${accounts.totalPages}"></b>
                   <button th:if="${accounts.hasNext()}">
-                    <a class="page-link" th:href="@{/(page=${accounts.number} + 1)}">>>>>></a>
+                    <a class="page-link" th:href="@{/admin/(page=${accounts.number} + 1)}">>>>>></a>
                   </button>
                 </div>
 
@@ -99,12 +99,12 @@
           <div class="card">
             <div class="card-body">
               <div class="text-center px-xl-3">
-                <a class="btn btn-success" href="/create">New Account</a>
+                <a class="btn btn-success" href="/admin/create">New Account</a>
               </div>
               <hr class="my-3">
               <div>
                 <div class="form-group">
-                  <form action="/findByFullName" method="get">
+                  <form action="/admin/findByFullName" method="get">
                     <label>Search by Name:</label>
                     <div><input name="findName" type="search" class="form-control w-100" placeholder="Name">
                       <input type="text" hidden name="action" value="findName">
